# web-api-aprofundation

./: README.md
python/: LICENSE  pyproject.toml
python-api-learning/: pyproject.toml
python-api-learning/src/fast_api_learning/: main.py
python-api-learning/src/fast_api_learning/config/: config.py
python-api-learning/src/fast_api_learning/controller/: student_controller.py
python-api-learning/src/fast_api_learning/model/: student_collection.py  student_model.py
python/src/fast_api_learning/: main.py
