[project]
name = "fast-api-learning"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "seujorgenochurras", email = "eusoulegaldemaiseverdadeeujuro@gmail.com"},
]

dependencies = [
    "fastapi>=0.109.2",
    "uvicorn[standard]>=0.27.0.post1",
]

requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.scripts]
api = "uvicorn src.fast_api_learning.main:app --reload"